# septima

./: .bazelrc  .editorconfig  .firebaserc  .gitignore  .prettierignore  AGENTS.md  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  cassandra.toml  eslint.config.mjs  maven_install.json  package.json  pnpm-lock.yaml
.github/workflows/: checks.yml  review.yml
backend/: BUILD.bazel  FirebaseAuthPlugin.kt  Main.kt  MainTest.kt  REVIEWERS.md  TokenVerifier.kt
docs/: DESIGN-BACKEND.md  DESIGN-BUILD.md  DESIGN-PROMPTS.md  DESIGN-SECURITY.md  DESIGN-TUTOR.md  DESIGN-UI.md
frontend/: BUILD.bazel  REVIEWERS.md  index.html  index.test.ts  tsconfig.json
frontend/src/: App.tsx  apiClient.ts  firebase.ts
tools/: BUILD.bazel  prettier_filter_links.sh
tools/format/: BUILD.bazel  ktlint_wrapper.sh  oxfmt_wrapper.sh  prettier.sh  prettier_wrapper.sh
tools/lint/: BUILD.bazel  eslint_run.sh  ktlint_run.sh  linters.bzl
