load("@bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm_rulesjs//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# copy_to_bin targets to expose configuration files to the output tree
copy_to_bin(
    name = "editorconfig_bin",
    srcs = [".editorconfig"],
)

copy_to_bin(
    name = "eslint_config_bin",
    srcs = ["eslint.config.mjs"],
)

copy_to_bin(
    name = "prettier_config_bin",
    srcs = [".prettierrc"],
)

copy_to_bin(
    name = "prettier_ignore_bin",
    srcs = [".prettierignore"],
)

alias(
    name = "format",
    actual = "//tools/format:format",
)
