module(
    name = "septima",
    version = "0.0.0",
)

# Standard libraries
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_shell", version = "0.7.1")

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Testing
        "org.junit.jupiter:junit-jupiter-api:5.11.4",
        "org.junit.jupiter:junit-jupiter-engine:5.11.4",
        "org.junit.platform:junit-platform-launcher:1.11.4",
        "org.junit.platform:junit-platform-console:1.11.4",
        # Ktor server
        "io.ktor:ktor-server-core-jvm:3.0.3",
        "io.ktor:ktor-server-netty-jvm:3.0.3",
        "io.ktor:ktor-server-content-negotiation-jvm:3.0.3",
        "io.ktor:ktor-serialization-kotlinx-json-jvm:3.0.3",
        "io.ktor:ktor-server-status-pages-jvm:3.0.3",
        "io.ktor:ktor-server-call-logging-jvm:3.0.3",
        # Ktor test utilities (used by backend_test in later PRs)
        "io.ktor:ktor-server-test-host-jvm:3.0.3",
        "io.ktor:ktor-client-content-negotiation-jvm:3.0.3",
        # Kotlinx serialization
        "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.7.3",
        # Firebase Admin SDK (token verification)
        "com.google.firebase:firebase-admin:9.4.1",
        # Logging — logback-classic with JSON encoder for structured Cloud Logging output
        "ch.qos.logback:logback-classic:1.5.6",
        "net.logstash.logback:logstash-logback-encoder:7.4",
    ],
    lock_file = "@@//:maven_install.json",
)
use_repo(maven, "maven")

# JavaScript / TypeScript
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.7")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

# Linting
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

# Node.js toolchain setup
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "24.0.0")
use_repo(node, "nodejs_toolchains")

# npm and pnpm setup (needed for rules_js)
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm_rulesjs",
    bins = {
        # vite's bin is not auto-detected due to peer-dep version qualifiers;
        # declare it explicitly so vite_binary() is generated.
        "vite": ["vite=./bin/vite.js"],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm_rulesjs")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
ts.deps(ts_version_from = "//:package.json")
use_repo(ts, "npm_typescript")

# Linters setup
http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "ktlint_jar",
    sha256 = "2e28cf46c27d38076bf63beeba0bdef6a845688d6c5dccd26505ce876094eb92",
    url = "https://github.com/pinterest/ktlint/releases/download/1.2.1/ktlint",
)

lint = use_extension("@aspect_rules_lint//lint:extensions.bzl", "tools")
lint.ktlint(name = "com_github_pinterest_ktlint")
use_repo(lint, "com_github_pinterest_ktlint")

format_tools = use_extension("@aspect_rules_lint//format:extensions.bzl", "tools")
format_tools.ktfmt()
use_repo(format_tools, "ktfmt")
