load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "backend",
    srcs = ["Main.kt"],
    visibility = ["//visibility:public"],
)

kt_jvm_test(
    name = "backend_test",
    srcs = ["MainTest.kt"],
    args = [
        "--select-package",
        "septima",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)
