load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "frontend",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    declaration = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tests_lib",
    srcs = ["index.test.ts"],
    declaration = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules/@types/node"],
)

js_test(
    name = "test",
    data = [":tests_lib"],
    entry_point = "index.test.js",
)
