load("@npm_rulesjs//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm_rulesjs//:prettier/package_json.bzl", prettier_bin = "bin")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

prettier_bin.prettier_binary(
    name = "prettier",
    args = [
        "--config=$(rootpath //:prettier_config_bin)",
        "--ignore-path=$(rootpath //:prettier_ignore_bin)",
        "--ignore-unknown",
    ],
    data = [
        "//:prettier_config_bin",
        "//:prettier_ignore_bin",
    ],
    env = {"BAZEL_BINDIR": "."},
)

sh_binary(
    name = "prettier_filter_links",
    srcs = ["prettier_filter_links.sh"],
    data = [":prettier"],
    env = {"PRETTIER_BIN": "$(rootpath :prettier)"},
)

eslint_bin.eslint_binary(
    name = "eslint",
    data = [
        "//:node_modules/@eslint/js",
        "//:node_modules/typescript-eslint",
        "//:prettier_config_bin",
    ],
    env = {"BAZEL_BINDIR": "."},
    fixed_args = ["--no-error-on-unmatched-pattern"],
)
