load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "ktlint",
    main_class = "com.pinterest.ktlint.Main",
    runtime_deps = ["@ktlint_jar//jar"],
)

sh_binary(
    name = "prettier",
    srcs = ["prettier.sh"],
    data = ["//:node_modules/prettier"],
)

format_multirun(
    name = "format",
    javascript = ":prettier",
    kotlin = ":ktlint",
    kotlin_fix_args = ["-F"],
    markdown = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    yaml = ":prettier",
)
