load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "ktfmt",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = ["@ktfmt//jar"],
)

format_multirun(
    name = "format",
    javascript = "//tools:prettier_filter_links",
    kotlin = ":ktfmt",
    markdown = "//tools:prettier_filter_links",
    starlark = "@buildifier_prebuilt//:buildifier",
    yaml = "//tools:prettier_filter_links",
)
