load("@npm_rulesjs//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm_rulesjs//:prettier/package_json.bzl", prettier_bin = "bin")

package(default_visibility = ["//visibility:public"])

exports_files(["baseline.xml"])

eslint_bin.eslint_binary(
    name = "eslint",
    data = [
        "//:eslint_config_bin",
        "//:node_modules/@eslint/js",
        "//:node_modules/typescript-eslint",
    ],
    env = {"BAZEL_BINDIR": "."},
    fixed_args = ["--no-error-on-unmatched-pattern"],
)

prettier_bin.prettier_binary(
    name = "prettier",
    data = ["//:prettier_config_bin"],
    env = {"BAZEL_BINDIR": "."},
)
